# ZNS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  api.md  build.rs  grpc.md  openrpc.json  phases.md
circuit/: .gitignore  CIRCUIT.md  CIRCUIT_SPEC.md  Cargo.toml  HYBRID_CIRCUIT_PLAN.md
circuit/src/: circuit.rs  fields.rs  hybrid_circuit.rs  lib.rs  main.rs  memo.rs  schnorr.rs  verify.rs
circuit/src/gadgets/: blake2b.rs  mod.rs  nonnative_point.rs  sinsemilla.rs  word64.rs
proto/: zns.proto
sdk/: README.md
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.ts  constants.ts  errors.ts  index.ts  memo.ts  pricing.ts  rpc.ts  types.ts  validation.ts  zip321.ts
sdk/typescript/test/: client.test.ts  memo.test.ts  pricing.test.ts  validation.test.ts  zip321.test.ts
src/: config.rs  decrypter.rs  main.rs  memo.rs  registry.rs  rpc.rs  service.rs
tests/: grpc_service.rs
tools/derive-address/: Cargo.toml
tools/derive-address/src/: main.rs
tools/zns-cli/: Cargo.toml
tools/zns-cli/src/: main.rs
