[package]
name = "zns-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
zcash_client_backend = { version = "0.21", features = ["lightwalletd-tonic-transport", "lightwalletd-tonic-tls-webpki-roots", "orchard"] }
orchard = { version = "0.11", default-features = false }
zcash_note_encryption = "0.4"
zcash_keys = { version = "0.12", features = ["orchard"] }
zcash_primitives = "0.26"
zcash_protocol = "0.7"
zip32 = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
zcash_address = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
